--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,7 +1,7 @@
 #-------------------------------
 # Site Settings
 title: General Interest
-logo: # You can add own logo. For example '/images/logo.png'.
+logo: /images/logo.png
 author: General Interest LLC
 description: Home of General Interest LLC.
 
