--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -28,8 +28,8 @@ menu__settings:
 # Hero Settings
 hero:
   hero__title: Lorem Ipsum
-  hero__description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-  hero__text: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  hero__description: At GI, we're builders and doers working to preserve the human scale in great cities, deep technology, and business.
+  hero__text: Amidst the web of American enterprise, small businesses stand out as vital contributors, embodying the essence of local economies. Crafted by calloused hands and unwavering spirit, they offer not merely goods and services but a piece of their own story. Each enterprise is a pursuit of passion. Each exchange is a connection that extends beyond transaction.
 
 #-------------------------------
 # Portfolio Settings
