--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -27,7 +27,7 @@ menu__settings:
 #-------------------------------
 # Hero Settings
 hero:
-  hero__title: Lorem Ipsum
+  hero__title: Small. Business.
   hero__description: At GI, we're builders and doers working to preserve the human scale in great cities, deep technology, and business.
   hero__text: Amidst the web of American enterprise, small businesses stand out as vital contributors, embodying the essence of local economies. Crafted by calloused hands and unwavering spirit, they offer not merely goods and services but a piece of their own story. Each enterprise is a pursuit of passion. Each exchange is a connection that extends beyond transaction.
 
