--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,7 +1,7 @@
 #-------------------------------
 # Site Settings
 title: General Interest
-logo: /images/logo.png
+logo: /images/GENERAL_INTEREST_LOGO_HORIZ.png
 author: General Interest LLC
 description: Home of General Interest LLC.
 
